<resources>
    <string name="app_name">Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_btn">LOGIN</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="registerView">REGISTER</string>
    <string name="registertxt">REGISTER</string>
    <string name="repeat_password">Repeat password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="type_your_email_to_reset_the_password">Type your email to reset the password</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="api">Api</string>
    <string name="chat">Chat</string>
    <string name="cache">Cache</string>
    <string name="multimedia">Multimedia</string>
    <string name="nom_pokemon">Nom Pokemon</string>
    <string name="url_pokemon">URL Pokemon</string>
    <string name="video_name">Video name</string>
    <string name="load">LOAD</string>
    <string name="text">Text</string>
    <string name="user">User</string>
    <string name="time">time</string>
</resources>